--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".views.MainActivity" >
+        <activity android:name=".views.main.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.UserProfileActivity" >
+        <activity android:name=".views.main.UserProfileActivity" >
         </activity>
-        <activity android:name=".views.UserRidesActivity" >
+        <activity android:name=".views.main.UserRidesActivity" >
         </activity>
-        <activity android:name=".views.UserGoalsActivity" >
+        <activity android:name=".views.main.UserGoalsActivity" >
         </activity>
-        <activity android:name=".views.CadenceCalcActivity" >
-        </activity>
-        <activity android:name=".views.RideAddActivity" >
+        <activity android:name=".views.sub.RideAddActivity" >
         </activity>
     </application>
 
