--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         </activity>
         <activity android:name=".views.sub.RideAddActivity" >
         </activity>
+        <activity
+            android:name=".views.sub.RideViewActivity"
+            android:label="@string/title_activity_ride_view"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
