--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity android:name=".views.main.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +25,6 @@
         <activity android:name=".views.main.UserGoalsActivity" >
         </activity>
         <activity android:name=".views.sub.RideAddActivity" >
-        </activity>
-        <activity
-            android:name=".views.sub.RideViewActivity"
-            android:label="@string/title_activity_ride_view"
-            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
