--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         </activity>
         <activity android:name=".views.main.UserGoalsActivity" >
         </activity>
+        <activity android:name=".views.main.UserBikesActivity" >
+        </activity>
         <activity android:name=".views.sub.RideAddActivity" >
+        </activity>
+        <activity android:name=".views.sub.BikeAddActivity" >
         </activity>
     </application>
 
