--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         </activity>
         <activity android:name=".views.sub.BikeAddActivity" >
         </activity>
+        <activity android:name=".views.sub.GoalUpdateActivity" >
+        </activity>
     </application>
 
 </manifest>
